--- a/app/src/main/res/layout/vendor_dashboard.xml
+++ b/app/src/main/res/layout/vendor_dashboard.xml
@@ -74,7 +74,7 @@
             android:weightSum="1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shopDescr"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1">
@@ -84,16 +84,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Add Item"
+                app:layout_constraintBottom_toTopOf="@+id/viewItems"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/dashboardLayout" />
 
             <Button
                 android:id="@+id/updateLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:text="Update Location"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/viewItems" />
 
             <Button
                 android:id="@+id/viewItems"
@@ -101,6 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="View Current Items"
+                app:layout_constraintBottom_toTopOf="@+id/closeShop"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/addItem" />
@@ -113,7 +118,7 @@
                 android:text="Close Shop"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addItem" />
+                app:layout_constraintTop_toBottomOf="@+id/updateLocation" />
 
         </LinearLayout>
 
@@ -141,6 +146,7 @@
                 android:id="@+id/setUpLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:text="Set Location"
                 app:layout_constraintTop_toBottomOf="@+id/setUpSubmit" />
 
